// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should display create form 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c12 > li {
  margin: 0 0.3rem;
}

.c0 {
  background: var(--gray-4);
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1.3rem 2rem;
}

.c0 > p {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 2rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
}

.c2 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c2 + .c1 {
  margin: 0 0 0 1rem;
}

.c2:hover {
  background: var(--primary-lighter);
}

.c14 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--secondary);
  color: var(--text);
  width: 4.4rem;
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
}

.c14 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c14 + .c13 {
  margin: 0 0 0 1rem;
}

.c14:hover {
  background: var(--secondary-darker);
}

.c14 + .c1 {
  margin-left: 1rem;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
}

.c11 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c11 + .c10 {
  margin: 0 0 0 1rem;
}

.c11 > svg {
  margin: 0;
}

.c11 + .c10 {
  margin: 0;
}

.c15 {
  background: rgba(0,0,0,0.5);
  bottom: 0;
  left: 0;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
  will-change: opacity;
}

.c16 {
  background: var(--white);
  border: 2rem solid var(--secondary);
  border-radius: 0.4rem;
  padding: 4rem;
  max-width: 69rem;
  margin: calc(var(--gutter) * 4) auto;
}

.c18 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c18 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c18 + .c17 {
  margin: 0 0 0 1rem;
}

.c18 > svg {
  margin: 0;
}

.c18 + .c17 {
  margin: 0;
}

.c19 {
  font-size: 2.4rem;
  margin: 0 0 3rem;
}

.c20 {
  margin: 0 0 var(--gutter);
}

.c26 {
  margin: 0 0 var(--gutter);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 > label {
  margin: 0 1rem 0 0;
}

.c21 {
  display: block;
  font-size: 1.6rem;
  margin: 0 0 1rem;
}

.c22 {
  border: 1px solid var(--gray-1);
  border-radius: 0.4rem;
  display: block;
  outline: none;
  padding: 1rem;
  width: 100%;
  font-size: 1.4rem;
}

.c22:focus {
  box-shadow: 0 0 0 0.3rem #c8e2ff;
}

.c27 {
  position: relative;
}

.c27 svg {
  position: absolute;
  top: 50%;
  right: 0.9rem;
  bottom: 0;
  -webkit-transform: translate(0,-50%) rotate(90deg);
  -ms-transform: translate(0,-50%) rotate(90deg);
  transform: translate(0,-50%) rotate(90deg);
}

.c28 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: var(--white);
  border: 1px solid var(--gray-1);
  border-radius: 0.5rem;
  cursor: pointer;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.4rem;
  outline: none;
  padding: 0.8rem 2.6rem 0.8rem 0.8rem;
}

.c28:focus {
  box-shadow: 0 0 0 0.3rem #c8e2ff;
}

.c23 {
  border: 1px solid var(--gray-1);
  border-radius: 0.4rem;
  padding: 2rem;
  position: relative;
}

.c24 svg {
  display: block;
  width: 2.4rem;
  height: 2.4rem;
  fill: var(--primary);
  margin: 0 auto;
}

.c24 span {
  display: block;
  font-size: 1.4rem;
  margin: 1rem 0 0;
  text-align: center;
}

.c24 small {
  color: var(--gray-2);
  display: block;
  font-size: 1.2rem;
  margin: 0.5rem 0 0;
  text-align: center;
}

.c25 {
  bottom: 0;
  cursor: pointer;
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c29 {
  -webkit-appearence: none;
  -moz-appearence: none;
  appearence: none;
  background: var(--primary);
  border: none;
  border-radius: 3.6rem;
  color: white;
  cursor: pointer;
  display: block;
  font-size: 1.4rem;
  margin: 3rem auto 0;
  outline: none;
  padding: 1.5rem 5.5rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c29:hover {
  background: var(--primary-lighter);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 8rem auto 12rem;
  grid-column-gap: 1rem;
  padding: 1.5rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c5:hover {
  background: var(--gray-5);
}

.c5 + .c4 {
  border-top: 1px solid var(--secondary);
}

.c6 {
  height: 8rem;
}

.c6 img {
  height: 100%;
  object-fit: contain;
  width: 100%;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  color: var(--gray-3);
  font-size: 1.2rem;
}

.c9 {
  place-self: center flex-end;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button {
  opacity: 0.5;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button:hover {
  opacity: 1;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  <ul
    class="c3"
  >
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Février 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Janvier 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
  </ul>
  <ul
    class="c12"
  >
    <li>
      <button
        class="c13 c14"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c13 c14"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
  <div
    class="c15"
    id="modal"
    style="opacity: 0;"
  >
    <div
      class="c16"
      id="modalInner"
      style="transform: translate3d(0, 2rem, 0);"
    >
      <button
        class="c10 c17 c18"
      >
        <svg
          height="26"
          viewBox="0 0 22 28"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.281 20.656c0 0.391-0.156 0.781-0.438 1.062l-2.125 2.125c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-4.594-4.594-4.594 4.594c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-2.125-2.125c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l4.594-4.594-4.594-4.594c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.594 4.594-4.594c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062s-0.156 0.781-0.438 1.062l-4.594 4.594 4.594 4.594c0.281 0.281 0.438 0.672 0.438 1.062z"
          />
        </svg>
      </button>
      <h1
        class="c19"
      >
        Create a photo
      </h1>
      <form
        action=""
        enctype="multipart/form-data"
        method="POST"
      >
        <div
          class="c20"
        >
          <label
            class="c21"
            for="title"
          >
            Title
          </label>
          <input
            class="c22"
            id="title"
            name="title"
            type="text"
            value=""
          />
        </div>
        <div
          class="c20"
        >
          <label
            class="c21"
            for="description"
          >
            Description
          </label>
          <input
            class="c22"
            id="description"
            name="description"
            type="text"
            value=""
          />
        </div>
        <div
          class="c20"
        >
          <label
            class="c21"
            for="file"
          >
            Photo
          </label>
          <div
            class="c23"
          >
            <div
              class="c24"
            >
              <svg
                height="16"
                viewBox="0 0 26 28"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 23c0-0.547-0.453-1-1-1s-1 0.453-1 1 0.453 1 1 1 1-0.453 1-1zM24 23c0-0.547-0.453-1-1-1s-1 0.453-1 1 0.453 1 1 1 1-0.453 1-1zM26 19.5v5c0 0.828-0.672 1.5-1.5 1.5h-23c-0.828 0-1.5-0.672-1.5-1.5v-5c0-0.828 0.672-1.5 1.5-1.5h6.672c0.422 1.156 1.531 2 2.828 2h4c1.297 0 2.406-0.844 2.828-2h6.672c0.828 0 1.5 0.672 1.5 1.5zM20.922 9.375c-0.156 0.375-0.516 0.625-0.922 0.625h-4v7c0 0.547-0.453 1-1 1h-4c-0.547 0-1-0.453-1-1v-7h-4c-0.406 0-0.766-0.25-0.922-0.625-0.156-0.359-0.078-0.797 0.219-1.078l7-7c0.187-0.203 0.453-0.297 0.703-0.297s0.516 0.094 0.703 0.297l7 7c0.297 0.281 0.375 0.719 0.219 1.078z"
                />
              </svg>
              <span>
                Upload new photo
              </span>
              <small>
                (only jpg and png)
              </small>
              <input
                class="c25"
                name="file"
                required=""
                type="file"
              />
            </div>
          </div>
        </div>
        <div
          class="c26"
        >
          <label
            class="c21"
            for="position"
          >
            Position
          </label>
          <div
            class="c27"
          >
            <select
              class="c28"
              id="position"
              name="position"
              required=""
            >
              <option
                value="left"
              >
                Left
              </option>
              <option
                value="center"
              >
                Center
              </option>
              <option
                value="right"
              >
                Right
              </option>
            </select>
            <svg
              height="14"
              viewBox="0 0 9 28"
              width="9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.297 15c0 0.125-0.063 0.266-0.156 0.359l-7.281 7.281c-0.094 0.094-0.234 0.156-0.359 0.156s-0.266-0.063-0.359-0.156l-0.781-0.781c-0.094-0.094-0.156-0.219-0.156-0.359 0-0.125 0.063-0.266 0.156-0.359l6.141-6.141-6.141-6.141c-0.094-0.094-0.156-0.234-0.156-0.359s0.063-0.266 0.156-0.359l0.781-0.781c0.094-0.094 0.234-0.156 0.359-0.156s0.266 0.063 0.359 0.156l7.281 7.281c0.094 0.094 0.156 0.234 0.156 0.359z"
              />
            </svg>
          </div>
        </div>
        <div
          class="c26"
        >
          <label
            class="c21"
            for="portrait"
          >
            Portrait
          </label>
          <input
            id="portrait"
            name="portrait"
            type="checkbox"
          />
        </div>
        <div
          class="c26"
        >
          <label
            class="c21"
            for="square"
          >
            Square
          </label>
          <input
            id="square"
            name="square"
            type="checkbox"
          />
        </div>
        <input
          class="c29"
          type="submit"
          value="Create"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`<List /> should display delete modal 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c12 > li {
  margin: 0 0.3rem;
}

.c0 {
  background: var(--gray-4);
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1.3rem 2rem;
}

.c0 > p {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 2rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
}

.c2 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c2 + .c1 {
  margin: 0 0 0 1rem;
}

.c2:hover {
  background: var(--primary-lighter);
}

.c22 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--secondary);
  color: var(--text);
}

.c22 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c22 + .c13 {
  margin: 0 0 0 1rem;
}

.c22:hover {
  background: var(--secondary-darker);
}

.c22 + .c1 {
  margin-left: 1rem;
}

.c15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--secondary);
  color: var(--text);
  width: 4.4rem;
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
}

.c15 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c15 + .c14 {
  margin: 0 0 0 1rem;
}

.c15:hover {
  background: var(--secondary-darker);
}

.c15 + .c1 {
  margin-left: 1rem;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
}

.c11 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c11 + .c10 {
  margin: 0 0 0 1rem;
}

.c11 > svg {
  margin: 0;
}

.c11 + .c10 {
  margin: 0;
}

.c16 {
  background: rgba(0,0,0,0.5);
  bottom: 0;
  left: 0;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
  will-change: opacity;
}

.c17 {
  background: var(--white);
  border: 2rem solid var(--secondary);
  border-radius: 0.4rem;
  padding: 4rem;
  max-width: 69rem;
  margin: calc(var(--gutter) * 4) auto;
}

.c19 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c19 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c19 + .c18 {
  margin: 0 0 0 1rem;
}

.c19 > svg {
  margin: 0;
}

.c19 + .c18 {
  margin: 0;
}

.c20 {
  font-size: 2.4rem;
  margin: 0 0 3rem;
}

.c21 {
  text-align: right;
  font-size: 1.2rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 8rem auto 12rem;
  grid-column-gap: 1rem;
  padding: 1.5rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c5:hover {
  background: var(--gray-5);
}

.c5 + .c4 {
  border-top: 1px solid var(--secondary);
}

.c6 {
  height: 8rem;
}

.c6 img {
  height: 100%;
  object-fit: contain;
  width: 100%;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  color: var(--gray-3);
  font-size: 1.2rem;
}

.c9 {
  place-self: center flex-end;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button {
  opacity: 0.5;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button:hover {
  opacity: 1;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  <ul
    class="c3"
  >
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Février 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Janvier 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
  </ul>
  <ul
    class="c12"
  >
    <li>
      <button
        class="c13 c14 c15"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c13 c14 c15"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
  <div
    class="c16"
    id="modal"
    style="opacity: 0;"
  >
    <div
      class="c17"
      id="modalInner"
      style="transform: translate3d(0, 2rem, 0);"
    >
      <button
        class="c10 c18 c19"
      >
        <svg
          height="26"
          viewBox="0 0 22 28"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.281 20.656c0 0.391-0.156 0.781-0.438 1.062l-2.125 2.125c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-4.594-4.594-4.594 4.594c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-2.125-2.125c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l4.594-4.594-4.594-4.594c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.594 4.594-4.594c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062s-0.156 0.781-0.438 1.062l-4.594 4.594 4.594 4.594c0.281 0.281 0.438 0.672 0.438 1.062z"
          />
        </svg>
      </button>
      <h1
        class="c20"
      >
        Are you sure?
      </h1>
      <p>
        This action is irreversible
      </p>
      <p
        class="c21"
      >
        <button
          class="c13 c22"
        >
           Cancel 
        </button>
        <button
          class="c1 c2"
        >
           
          Yes
           
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`<List /> should display edit form 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c12 > li {
  margin: 0 0.3rem;
}

.c0 {
  background: var(--gray-4);
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1.3rem 2rem;
}

.c0 > p {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 2rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
}

.c2 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c2 + .c1 {
  margin: 0 0 0 1rem;
}

.c2:hover {
  background: var(--primary-lighter);
}

.c14 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--secondary);
  color: var(--text);
  width: 4.4rem;
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
}

.c14 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c14 + .c13 {
  margin: 0 0 0 1rem;
}

.c14:hover {
  background: var(--secondary-darker);
}

.c14 + .c1 {
  margin-left: 1rem;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
}

.c11 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c11 + .c10 {
  margin: 0 0 0 1rem;
}

.c11 > svg {
  margin: 0;
}

.c11 + .c10 {
  margin: 0;
}

.c15 {
  background: rgba(0,0,0,0.5);
  bottom: 0;
  left: 0;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
  will-change: opacity;
}

.c16 {
  background: var(--white);
  border: 2rem solid var(--secondary);
  border-radius: 0.4rem;
  padding: 4rem;
  max-width: 69rem;
  margin: calc(var(--gutter) * 4) auto;
}

.c18 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c18 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c18 + .c17 {
  margin: 0 0 0 1rem;
}

.c18 > svg {
  margin: 0;
}

.c18 + .c17 {
  margin: 0;
}

.c19 {
  font-size: 2.4rem;
  margin: 0 0 3rem;
}

.c20 {
  margin: 0 0 var(--gutter);
}

.c27 {
  margin: 0 0 var(--gutter);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 > label {
  margin: 0 1rem 0 0;
}

.c21 {
  display: block;
  font-size: 1.6rem;
  margin: 0 0 1rem;
}

.c22 {
  border: 1px solid var(--gray-1);
  border-radius: 0.4rem;
  display: block;
  outline: none;
  padding: 1rem;
  width: 100%;
  font-size: 1.4rem;
}

.c22:focus {
  box-shadow: 0 0 0 0.3rem #c8e2ff;
}

.c28 {
  position: relative;
}

.c28 svg {
  position: absolute;
  top: 50%;
  right: 0.9rem;
  bottom: 0;
  -webkit-transform: translate(0,-50%) rotate(90deg);
  -ms-transform: translate(0,-50%) rotate(90deg);
  transform: translate(0,-50%) rotate(90deg);
}

.c29 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: var(--white);
  border: 1px solid var(--gray-1);
  border-radius: 0.5rem;
  cursor: pointer;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.4rem;
  outline: none;
  padding: 0.8rem 2.6rem 0.8rem 0.8rem;
}

.c29:focus {
  box-shadow: 0 0 0 0.3rem #c8e2ff;
}

.c23 {
  border: 1px solid var(--gray-1);
  border-radius: 0.4rem;
  padding: 2rem;
  position: relative;
}

.c24 img {
  display: block;
  max-width: 100%;
  max-height: 17rem;
  margin: 0 auto var(--gutter);
}

.c25 svg {
  display: block;
  width: 2.4rem;
  height: 2.4rem;
  fill: var(--primary);
  margin: 0 auto;
}

.c25 span {
  display: block;
  font-size: 1.4rem;
  margin: 1rem 0 0;
  text-align: center;
}

.c25 small {
  color: var(--gray-2);
  display: block;
  font-size: 1.2rem;
  margin: 0.5rem 0 0;
  text-align: center;
}

.c26 {
  bottom: 0;
  cursor: pointer;
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c30 {
  -webkit-appearence: none;
  -moz-appearence: none;
  appearence: none;
  background: var(--primary);
  border: none;
  border-radius: 3.6rem;
  color: white;
  cursor: pointer;
  display: block;
  font-size: 1.4rem;
  margin: 3rem auto 0;
  outline: none;
  padding: 1.5rem 5.5rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c30:hover {
  background: var(--primary-lighter);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 8rem auto 12rem;
  grid-column-gap: 1rem;
  padding: 1.5rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c5:hover {
  background: var(--gray-5);
}

.c5 + .c4 {
  border-top: 1px solid var(--secondary);
}

.c6 {
  height: 8rem;
}

.c6 img {
  height: 100%;
  object-fit: contain;
  width: 100%;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  color: var(--gray-3);
  font-size: 1.2rem;
}

.c9 {
  place-self: center flex-end;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button {
  opacity: 0.5;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button:hover {
  opacity: 1;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  <ul
    class="c3"
  >
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Février 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Janvier 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
  </ul>
  <ul
    class="c12"
  >
    <li>
      <button
        class="c13 c14"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c13 c14"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
  <div
    class="c15"
    id="modal"
    style="opacity: 0;"
  >
    <div
      class="c16"
      id="modalInner"
      style="transform: translate3d(0, 2rem, 0);"
    >
      <button
        class="c10 c17 c18"
      >
        <svg
          height="26"
          viewBox="0 0 22 28"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.281 20.656c0 0.391-0.156 0.781-0.438 1.062l-2.125 2.125c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-4.594-4.594-4.594 4.594c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-2.125-2.125c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l4.594-4.594-4.594-4.594c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.594 4.594-4.594c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062s-0.156 0.781-0.438 1.062l-4.594 4.594 4.594 4.594c0.281 0.281 0.438 0.672 0.438 1.062z"
          />
        </svg>
      </button>
      <h1
        class="c19"
      >
        Edit photo
      </h1>
      <form
        action=""
        enctype="multipart/form-data"
        method="POST"
      >
        <div
          class="c20"
        >
          <label
            class="c21"
            for="title"
          >
            Title
          </label>
          <input
            class="c22"
            id="title"
            name="title"
            type="text"
            value=""
          />
        </div>
        <div
          class="c20"
        >
          <label
            class="c21"
            for="description"
          >
            Description
          </label>
          <input
            class="c22"
            id="description"
            name="description"
            type="text"
            value="Février 2019"
          />
        </div>
        <div
          class="c20"
        >
          <label
            class="c21"
            for="file"
          >
            Photo
          </label>
          <div
            class="c23"
          >
            <div
              class="c24"
            >
              <img
                src="/img/01d2y7jt2j24dv0s82m9xq729d.jpg"
              />
            </div>
            <div
              class="c25"
            >
              <svg
                height="16"
                viewBox="0 0 26 28"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 23c0-0.547-0.453-1-1-1s-1 0.453-1 1 0.453 1 1 1 1-0.453 1-1zM24 23c0-0.547-0.453-1-1-1s-1 0.453-1 1 0.453 1 1 1 1-0.453 1-1zM26 19.5v5c0 0.828-0.672 1.5-1.5 1.5h-23c-0.828 0-1.5-0.672-1.5-1.5v-5c0-0.828 0.672-1.5 1.5-1.5h6.672c0.422 1.156 1.531 2 2.828 2h4c1.297 0 2.406-0.844 2.828-2h6.672c0.828 0 1.5 0.672 1.5 1.5zM20.922 9.375c-0.156 0.375-0.516 0.625-0.922 0.625h-4v7c0 0.547-0.453 1-1 1h-4c-0.547 0-1-0.453-1-1v-7h-4c-0.406 0-0.766-0.25-0.922-0.625-0.156-0.359-0.078-0.797 0.219-1.078l7-7c0.187-0.203 0.453-0.297 0.703-0.297s0.516 0.094 0.703 0.297l7 7c0.297 0.281 0.375 0.719 0.219 1.078z"
                />
              </svg>
              <span>
                Upload new photo
              </span>
              <small>
                (only jpg and png)
              </small>
              <input
                class="c26"
                name="file"
                type="file"
              />
            </div>
          </div>
        </div>
        <div
          class="c27"
        >
          <label
            class="c21"
            for="position"
          >
            Position
          </label>
          <div
            class="c28"
          >
            <select
              class="c29"
              id="position"
              name="position"
              required=""
            >
              <option
                value="left"
              >
                Left
              </option>
              <option
                value="center"
              >
                Center
              </option>
              <option
                selected=""
                value="right"
              >
                Right
              </option>
            </select>
            <svg
              height="14"
              viewBox="0 0 9 28"
              width="9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.297 15c0 0.125-0.063 0.266-0.156 0.359l-7.281 7.281c-0.094 0.094-0.234 0.156-0.359 0.156s-0.266-0.063-0.359-0.156l-0.781-0.781c-0.094-0.094-0.156-0.219-0.156-0.359 0-0.125 0.063-0.266 0.156-0.359l6.141-6.141-6.141-6.141c-0.094-0.094-0.156-0.234-0.156-0.359s0.063-0.266 0.156-0.359l0.781-0.781c0.094-0.094 0.234-0.156 0.359-0.156s0.266 0.063 0.359 0.156l7.281 7.281c0.094 0.094 0.156 0.234 0.156 0.359z"
              />
            </svg>
          </div>
        </div>
        <div
          class="c27"
        >
          <label
            class="c21"
            for="portrait"
          >
            Portrait
          </label>
          <input
            id="portrait"
            name="portrait"
            type="checkbox"
          />
        </div>
        <div
          class="c27"
        >
          <label
            class="c21"
            for="square"
          >
            Square
          </label>
          <input
            id="square"
            name="square"
            type="checkbox"
          />
        </div>
        <input
          class="c30"
          type="submit"
          value="Save"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`<List /> should not display delete modal 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c12 > li {
  margin: 0 0.3rem;
}

.c0 {
  background: var(--gray-4);
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1.3rem 2rem;
}

.c0 > p {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 2rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
}

.c2 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c2 + .c1 {
  margin: 0 0 0 1rem;
}

.c2:hover {
  background: var(--primary-lighter);
}

.c16 + .c13 {
  margin: 0 0 0 1rem;
}

.c16 + .c1 {
  margin-left: 1rem;
}

.c15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--secondary);
  color: var(--text);
  width: 4.4rem;
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
}

.c15 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c15 + .c14 {
  margin: 0 0 0 1rem;
}

.c15:hover {
  background: var(--secondary-darker);
}

.c15 + .c1 {
  margin-left: 1rem;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
}

.c11 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c11 + .c10 {
  margin: 0 0 0 1rem;
}

.c11 > svg {
  margin: 0;
}

.c11 + .c10 {
  margin: 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 8rem auto 12rem;
  grid-column-gap: 1rem;
  padding: 1.5rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c5:hover {
  background: var(--gray-5);
}

.c5 + .c4 {
  border-top: 1px solid var(--secondary);
}

.c6 {
  height: 8rem;
}

.c6 img {
  height: 100%;
  object-fit: contain;
  width: 100%;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  color: var(--gray-3);
  font-size: 1.2rem;
}

.c9 {
  place-self: center flex-end;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button {
  opacity: 0.5;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button:hover {
  opacity: 1;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  <ul
    class="c3"
  >
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Février 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Janvier 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
  </ul>
  <ul
    class="c12"
  >
    <li>
      <button
        class="c13 c14 c15"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c13 c14 c15"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
</div>
`;

exports[`<List /> should not display edit form 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c12 > li {
  margin: 0 0.3rem;
}

.c0 {
  background: var(--gray-4);
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1.3rem 2rem;
}

.c0 > p {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 2rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
}

.c2 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c2 + .c1 {
  margin: 0 0 0 1rem;
}

.c2:hover {
  background: var(--primary-lighter);
}

.c14 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--secondary);
  color: var(--text);
  width: 4.4rem;
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
}

.c14 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c14 + .c13 {
  margin: 0 0 0 1rem;
}

.c14:hover {
  background: var(--secondary-darker);
}

.c14 + .c1 {
  margin-left: 1rem;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
}

.c11 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c11 + .c10 {
  margin: 0 0 0 1rem;
}

.c11 > svg {
  margin: 0;
}

.c11 + .c10 {
  margin: 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 8rem auto 12rem;
  grid-column-gap: 1rem;
  padding: 1.5rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c5:hover {
  background: var(--gray-5);
}

.c5 + .c4 {
  border-top: 1px solid var(--secondary);
}

.c6 {
  height: 8rem;
}

.c6 img {
  height: 100%;
  object-fit: contain;
  width: 100%;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  color: var(--gray-3);
  font-size: 1.2rem;
}

.c9 {
  place-self: center flex-end;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button {
  opacity: 0.5;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button:hover {
  opacity: 1;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  <ul
    class="c3"
  >
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Février 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Janvier 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
  </ul>
  <ul
    class="c12"
  >
    <li>
      <button
        class="c13 c14"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c13 c14"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
</div>
`;

exports[`<List /> should render list photos 1`] = `
.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c12 > li {
  margin: 0 0.3rem;
}

.c0 {
  background: var(--gray-4);
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1.3rem 2rem;
}

.c0 > p {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 2rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
}

.c2 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c2 + .c1 {
  margin: 0 0 0 1rem;
}

.c2:hover {
  background: var(--primary-lighter);
}

.c14 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--secondary);
  color: var(--text);
  width: 4.4rem;
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
}

.c14 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c14 + .c13 {
  margin: 0 0 0 1rem;
}

.c14:hover {
  background: var(--secondary-darker);
}

.c14 + .c1 {
  margin-left: 1rem;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
}

.c11 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c11 + .c10 {
  margin: 0 0 0 1rem;
}

.c11 > svg {
  margin: 0;
}

.c11 + .c10 {
  margin: 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 8rem auto 12rem;
  grid-column-gap: 1rem;
  padding: 1.5rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c5:hover {
  background: var(--gray-5);
}

.c5 + .c4 {
  border-top: 1px solid var(--secondary);
}

.c6 {
  height: 8rem;
}

.c6 img {
  height: 100%;
  object-fit: contain;
  width: 100%;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 {
  color: var(--gray-3);
  font-size: 1.2rem;
}

.c9 {
  place-self: center flex-end;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button {
  opacity: 0.5;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c9 button:hover {
  opacity: 1;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  <ul
    class="c3"
  >
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Février 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
    <li
      class="c4 c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        
        <p
          class="c8"
        >
          Janvier 2019
        </p>
      </div>
      <p
        class="c9"
      >
        <button
          class="c10 c11"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="c10 c11"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
  </ul>
  <ul
    class="c12"
  >
    <li>
      <button
        class="c13 c14"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c13 c14"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
</div>
`;

exports[`<List /> should render loading view 1`] = `
.c3 {
  margin: 2rem 0;
  -webkit-animation: eMLfYp 800ms ease-in-out infinite alternate;
  animation: eMLfYp 800ms ease-in-out infinite alternate;
}

.c3:after {
  background: var(--primary);
  border-radius: 50%;
  content: '';
  display: block;
  height: 1rem;
  width: 1rem;
  margin: 0 auto;
}

.c0 {
  background: var(--gray-4);
  color: var(--white);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1.3rem 2rem;
}

.c0 > p {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 0.2rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Roboto',Arial,sans-serif;
  font-size: 1.2rem;
  outline: none;
  padding: 1rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary);
  color: white;
}

.c2 > svg {
  margin: 0 -0.3rem 0 0.3rem;
}

.c2 + .c1 {
  margin: 0 0 0 1rem;
}

.c2:hover {
  background: var(--primary-lighter);
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  <div
    class="c3"
  />
</div>
`;
